Fixed detailed view to not overlay entire page by default, metadata section is now invisible in detailed view if not provided, if visible metadata section has full height

--- a/src/components/data-card/data-card.css
+++ b/src/components/data-card/data-card.css
@@ -85,17 +85,18 @@ a {
   text-decoration: underline;
 }
 
+
 .modal {
-  position: fixed;
+  /*position: fixed;
   top: 0;
-  left: 0;
-  height: -webkit-fill-available;
+  left: 0;*/
+  height: "100%";
   width: -webkit-fill-available;
   background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  /*z-index: 100;*/
   padding: 2em;
 }
 
